--- a/source/index.html
+++ b/source/index.html
@@ -505,6 +505,7 @@
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="js/swiper.js"></script>
+  <script src="js/pokemon.js"></script>
   <script src="js/main.js"></script>
 </body>
 
